<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuFragment">

    <FrameLayout
        android:id="@+id/fLy_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipChildren="false"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.aaa.andkotlininvaders.LogoTextView
            android:id="@+id/logoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="24dp"
            android:text="@string/app_name"
            android:textColor="@color/secondaryFontColor"
            android:textSize="29sp"
            android:textStyle="italic|bold"
            app:fontFamily="@font/naguri" />

    </FrameLayout>

    <com.aaa.andkotlininvaders.MenuButtonView
        android:id="@+id/btn_start"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        app:layout_constraintTop_toBottomOf="@+id/fLy_logo"
        app:layout_constraintBottom_toTopOf="@+id/btn_view_scores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.6" />

    <com.aaa.andkotlininvaders.MenuButtonView
        android:id="@+id/btn_view_scores"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_scores"
        app:layout_constraintTop_toBottomOf="@+id/btn_start"
        app:layout_constraintBottom_toTopOf="@+id/btn_exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.6" />

    <com.aaa.andkotlininvaders.MenuButtonView
        android:id="@+id/btn_exit"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        app:layout_constraintTop_toBottomOf="@+id/btn_view_scores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_copyright"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>