<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameClearedFragment">

    <TextView
        android:id="@+id/txt_cleared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_complete"
        android:textColor="@color/white"
        android:textSize="@dimen/text_44_size"
        app:fontFamily="@font/naguri"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.aaa.andkotlininvaders.MenuButtonView
        android:id="@+id/btn_restart2"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_nextgame"
        app:layout_constraintTop_toBottomOf="@+id/txt_cleared"
        app:layout_constraintBottom_toTopOf="@+id/btn_view_scores2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.6" />

    <com.aaa.andkotlininvaders.MenuButtonView
        android:id="@+id/btn_view_scores2"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_scores"
        app:layout_constraintTop_toBottomOf="@+id/btn_restart2"
        app:layout_constraintBottom_toTopOf="@+id/btn_exit2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.6" />

    <com.aaa.andkotlininvaders.MenuButtonView
        android:id="@+id/btn_exit2"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        app:layout_constraintTop_toBottomOf="@+id/btn_view_scores2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>